rust/macros/tests/invalid/target/debug/deps/triple_arguments_rs-374668ede5e1508a.d
/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/libtriple_arguments_rs-374668ede5e1508a.rmeta: triple-arguments.rs Cargo.toml

/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/triple_arguments_rs-374668ede5e1508a.d: triple-arguments.rs Cargo.toml

triple-arguments.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
